# fishpi-rust

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
client/src/: app.rs  main.rs
client/src/commands/: mod.rs  registry.rs
client/src/commands/handlers/: article.rs  (+8 more)
client/src/ui/: mod.rs
client/src/utils/: auth.rs  mod.rs
docs/: crates.js  help.html  search-index.js  settings.html  src-files.js  struct.FishPi.html
docs/api/article_api/: index.html  sidebar-items.js  struct.ArticleApi.html
docs/api/chat_api/: sidebar-items.js
docs/api/chatroom_api/: index.html  struct.NodeResponse.html
docs/api/client/: index.html  sidebar-items.js  struct.ApiClient.html
docs/api/comment_api/: index.html  sidebar-items.js  struct.CommentApi.html
docs/api/emoji_api/: index.html
docs/api/notice_api/: index.html  struct.NoticeApi.html
docs/api/redpacket_api/: sidebar-items.js
docs/fishpi_rust/: all.html  index.html  sidebar-items.js
docs/fishpi_rust/api/: index.html  sidebar-items.js
docs/fishpi_rust/models/: index.html  sidebar-items.js
docs/fishpi_rust/services/: index.html  sidebar-items.js
docs/models/article/: enum.ArticleType.html  enum.VoteStatus.html  sidebar-items.js  struct.ArticleDetail.html  struct.ArticleListType.html  struct.ArticlePost.html  struct.ArticleTag.html  struct.ResponseResult.html
docs/models/breezemoon/: struct.BreezemoonList.html  struct.BreezemoonPost.html
docs/models/chat/: enum.ChatDataContent.html  index.html  struct.ChatData.html  struct.ChatMessage.html  struct.ChatMessageType.html  struct.ChatNotice.html  struct.ChatRevoke.html  struct.MessageInfo.html
docs/models/chatroom/: enum.ChatRoomDataContent.html  enum.ChatRoomQueryMode.html  sidebar-items.js  struct.BarrageCost.html  struct.BarragerMsg.html  struct.ChatRoomData.html  struct.ChatRoomMessage.html  struct.ChatRoomUser.html  struct.ChatSource.html  struct.MusicMsg.html  struct.WeatherMsgData.html
docs/models/comment/: fn.parse_comment_data.html  sidebar-items.js
docs/models/emoji/: index.html  struct.EmojiList.html
docs/models/notice/: sidebar-items.js  struct.NoticeComment.html  struct.NoticeMsg.html  struct.NoticeMsgType.html  struct.NoticePoint.html  struct.NoticeSystem.html
docs/models/redpacket/: index.html  struct.RedPacketGot.html  struct.RedPacketStatusMsg.html
docs/models/upload/: sidebar-items.js  struct.UploadData.html
docs/models/user/: enum.UserAppRole.html  index.html  struct.ApiResponse.html  struct.LoginResponse.html  struct.Metal.html  struct.MetalAttr.html  struct.UserInfo.html  type.MetalList.html
docs/search.desc/fishpi_rust/: fishpi_rust-desc-0-.js
docs/services/: trait.ApiCaller.html
docs/services/article_service/: sidebar-items.js  struct.ArticleService.html
docs/services/chat_service/: index.html  sidebar-items.js  type.ChatListener.html
docs/services/chatroom_service/: struct.ChatroomService.html
docs/services/comment_service/: index.html  sidebar-items.js
docs/services/emoji_service/: struct.EmojiService.html
docs/services/notice_service/: index.html  sidebar-items.js  struct.NoticeService.html  type.CloseHandler.html
docs/services/redpacket_service/: sidebar-items.js  struct.RedpacketService.html
docs/services/user_service/: index.html
docs/src/fishpi_rust/: lib.rs.html
src/: lib.rs
src/api/: article_api.rs  breezemoon_api.rs  chat_api.rs  chatroom_api.rs  client.rs  comment_api.rs  emoji_api.rs  mod.rs  notice_api.rs  redpacket_api.rs  user_api.rs
src/models/: article.rs  breezemoon.rs  chat.rs  chatroom.rs  comment.rs  emoji.rs  mod.rs  notice.rs  redpacket.rs  upload.rs  user.rs
src/services/: article_service.rs  breezemoon_service.rs  chat_service.rs  chatroom_service.rs  comment_service.rs  emoji_service.rs  mod.rs  notice_service.rs  redpacket_service.rs  user_service.rs
(+133 files in other folders)
