[package]
name = "fishpi-rust"
version = "0.1.0"
edition = "2024"
authors = ["只有午安"]
description = "FishPi社区API的Rust库"
license = "MIT"
repository = "https://github.com/imlyzh/fishpi-rust"
documentation = "https://docs.rs/fishpi-rust"
readme = "README.md"
keywords = ["fishpi"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fishpi_rust"
path = "src/lib.rs"

# [[bin]]
# name = "fishpi-client"
# path = "fishpi-client/src/main.rs"


[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.19", features = ["native-tls"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
url = "2.3"
regex = "1.10.2"
chrono = "0.4"
colored = "2.0"
async-trait = "0.1"
dotenv = "0.15"
rpassword = "7.3"
clap = { version = "4.4", features = ["derive"] }
tokio-util = "0.7"
futures-util = "0.3"
env_logger = "0.10"
dirs = "6.0"
md5 = "0.7"
lazy_static = "1.4"
rand = "0.9.1"
thiserror = "2.0.12"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

